--- a/src/front/macOS/kDriveResources/Localizable/de.lproj/Localizable.strings
+++ b/src/front/macOS/kDriveResources/Localizable/de.lproj/Localizable.strings
@@ -4,7 +4,7 @@
  * Locale: de, German
  * Tagged: macOS
  * Exported by: Valentin Perignon
- * Exported at: Wed, 08 Oct 2025 16:23:50 +0200
+ * Exported at: Fri, 10 Oct 2025 14:22:19 +0200
  */
 
 /* loco:68e673c48af12c42e80027c8 */
@@ -19,11 +19,20 @@
 /* loco:68b04d5a63085b7ab90cea63 */
 "buttonOpenInFinder" = "In Finder öffnen";
 
+/* loco:68e8fa06c1b003290f0ccf42 */
+"onboardingErrorTitle" = "Fehler bei der Verbindung";
+
 /* loco:68e6739c8af12c42e80027c5 */
 "onboardingLoginDescription" = "Die schnelle und sichere private Cloud, die in der Schweiz gehostet wird.\n\nMelden Sie sich an und halten Sie Ihre Dokumente auf all Ihren Geräten synchronisiert.";
 
+/* loco:68e8fa543a683192560af9e2 */
+"onboardingLoginErrorDescription" = "Une erreur est survenue, veuillez réessayer.";
+
 /* loco:68e673754d80559c460bdf02 */
 "onboardingLoginTitle" = "Willkommen bei kDrive!";
+
+/* loco:68e8fa27d09187683c0679b2 */
+"onboardingWindowTitle" = "Willkommen bei kDrive";
 
 /* loco:68cd386502633dee14000352 */
 "sidebarItemAccounts" = "Konten";
