--- a/src/front/macOS/kDriveResources/Localizable/it.lproj/Localizable.strings
+++ b/src/front/macOS/kDriveResources/Localizable/it.lproj/Localizable.strings
@@ -4,7 +4,7 @@
  * Locale: it, Italian
  * Tagged: macOS
  * Exported by: Valentin Perignon
- * Exported at: Wed, 08 Oct 2025 16:23:50 +0200
+ * Exported at: Fri, 10 Oct 2025 14:22:19 +0200
  */
 
 /* loco:68e673c48af12c42e80027c8 */
@@ -19,11 +19,20 @@
 /* loco:68b04d5a63085b7ab90cea63 */
 "buttonOpenInFinder" = "Aprire nel Finder";
 
+/* loco:68e8fa06c1b003290f0ccf42 */
+"onboardingErrorTitle" = "Errore di connessione";
+
 /* loco:68e6739c8af12c42e80027c5 */
 "onboardingLoginDescription" = "Il cloud privato veloce e sicuro, ospitato in Svizzera.\n\nCollegatevi e mantenete i vostri documenti sincronizzati su tutti i vostri dispositivi.";
 
+/* loco:68e8fa543a683192560af9e2 */
+"onboardingLoginErrorDescription" = "È stato commesso un errore, quindi è necessario ripetere l'operazione.";
+
 /* loco:68e673754d80559c460bdf02 */
 "onboardingLoginTitle" = "Benvenuti su kDrive!";
+
+/* loco:68e8fa27d09187683c0679b2 */
+"onboardingWindowTitle" = "Benvenuti in kDrive";
 
 /* loco:68cd386502633dee14000352 */
 "sidebarItemAccounts" = "Conti";
